feat: add platform administration API
